<resources>
    <string name="app_name">MediTake</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_tab">TabActivity</string>
    <string name="search_hint">Find a medicine</string>
    <string name="MEDICINE_INSERTION_SUCCESSFULL">medicine inserted</string>

    <!-- Label for overflow menu option that inserts fake pet data into the app [CHAR LIMIT=20] -->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <!-- Label for overflow menu option that deletes all pet data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All Pets</string>

    <!-- Title for the activity to add a new pet [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_pet">Add a Pet</string>

    <!-- Label for editor menu option to save pet and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current pet [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- Label for overview category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="category_overview">Overview</string>

    <!-- Label for gender information in the editor [CHAR LIMIT=30] -->
    <string name="category_gender">Gender</string>

    <!-- Label for measurement information in the editor [CHAR LIMIT=30] -->
    <string name="category_measurement">Measurement</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_pet_name">Name</string>

    <!-- Text hint for breed field in the editor [CHAR LIMIT=30] -->
    <string name="hint_pet_breed">Breed</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_pet_weight">Weight</string>

    <!-- Units for weight of the pet (kilograms) [CHAR LIMIT=5] -->
    <string name="unit_pet_weight">kg</string>

    <!-- Label for dropdown menu option if the pet's gender is unknown [CHAR LIMIT=20] -->
    <string name="gender_unknown">Unknown</string>

    <!-- Label for dropdown menu option if the pet is male [CHAR LIMIT=20] -->
    <string name="gender_male">Male</string>

    <!-- Label for dropdown menu option if the pet is female [CHAR LIMIT=20] -->
    <string name="gender_female">Female</string>

    <string name = "editor_insert_pet_successful">Pet Saved</string>

    <string name = "editor_insert_pet_failed"> Error with saving pet</string>
    
    <string name="med_name">Medicine Name</string>
    
    <string name="dose_type">Dose Type</string>
    <string name="dose_week">Doses/Week</string>
    <string name="quantity_at_time">Quantity</string>
    <string name="doses_day">Doses/Day</string>
    <string name="reminders">Reminders</string>
    <string name="no_of_purchased_med">Purchased</string>


    <string name="hint_doses_week">Number of Doses/Week</string>
    <string name="hint_dose_day">Number Of Doses/Day</string>
    <string name="hint_quantity">Quantity At A Time</string>
    <string name="hint_reminders">Set Reminders</string>
    <string name="hint_purchased">No. Of Medicine Purchased</string>

    <!--option for frequency type-->
    <string name="frequnecy_daily">Daily</string>
    <string name="frequnecy_weekly">Weekly</string>
    <string name="empty_medicine">It\'s a bit lonely here...</string>
    <string name="get_started">Get started by adding medicines</string>
</resources>
